# cvxdual

./: README.md  pyproject.toml
src/cvxdual/: __init__.py  api.py  utils.py
tests/: test_dualize.py  test_structure.py
