[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cvxdual"
version = "0.1.0"
description = "Automatic conic dualization for CVXPY models."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
  "cvxpy>=1.5",
]

[dependency-groups]
dev = [
  "ipython>=8.38.0",
  "pytest>=8.0",
]

[tool.uv]
default-groups = ["dev"]

[tool.hatch.build.targets.wheel]
packages = ["src/cvxdual"]
